--- a/true_2.tex
+++ b/true_2.tex
@@ -35,6 +35,8 @@
    $\lambda = a/b$. Furthermore, it is quite easy to show that $(\psi,\{\alpha,\beta\}\psi) = 0$. \\
    However, in general, $\psi$ need not be a simultaneous eigenfunction of $A$ and $B$ and $(\psi,\{\alpha,\beta\}\psi)$ will not in general be zero. In these cases, we will have the more general 
    relationship $\Delta A\Delta B \rangle  0$ even though $A$  and $B$ commute. \\
+   
+   \subsection{Special case when $\Delta x \Delta p_x =\hbar/2$}
    Now let us return to the above one-dimensional case, $\Delta x \Delta p_x \ge \hbar/2$ and inquire what happens when the equality sign holds, i.e., when $\Delta x\Delta p_x = \hbar/2$.\\   
    For this to happen, we need $f=\lambda g$ and $(\psi\{\alpha,\beta\}\psi) = 0$. The latter condition tells us 
    \[ 0 = (\psi,(\alpha\beta + \beta\alpha)\psi) = (\psi,\alpha g) + (\psi,\beta f) = (\alpha\psi,g) + (\beta\psi,f) = (f,g) + (g,f).\]\\
