"up to page 44 of Trues notes"

--- a/true_notes.tex
+++ b/true_notes.tex
@@ -97,6 +97,24 @@
 \def\cofac{\hbox{cofactor}}
 \def\gij{g_{ij}}
 \def\gijinv{g^{ij}}
+\def\gstar{\overline{g}_{\alpha\beta}}
+\def\Kronij{\delta^j_i}
+
+\def\Z{\mathbb{Z}}
+\def\F{\mathbb{F}}
+\def\R{\mathbb{R}}
+\def\L{\mathbb{L}}
+\def\C{\mathbb{C}}
+
+\def\a{\mathfrak{a}}
+\def\b{\mathfrak{b}}
+\def\c{\mathfrak{c}}
+\def\c{\mathfrak{c}}
+\def\r{\mathfrak{r}}
+\def\o{\mathfrak{0}}
+
+\def\E{\mathcal{E}}
+
 \def\half{1\over2}
 \def\gab{g_{\alpha\beta}}
 \def\gabinv{g^{\alpha\beta}}
