--- a/true_notes.tex
+++ b/true_notes.tex
@@ -326,6 +326,19 @@ level.
 
 %\setcounter{section}{-1}
 
+%\[\left( \begin{array}{cc} 2\tau & 7\phi-frac5{12} \\
+%           3\psi & \frac{\pi}8 \end{array} \right)
+%\left( \begin{array}{c} x \\ y \end{array} \right)
+%\mbox{~and~} \left[ \begin{array}{cc|r}
+%     3 & 4 & 5 \\ 1 & 3 & 729 \end{array} \right] \]
+     
+
+%\[   f(z) =     \left\{ \begin{array}{rcl}
+%         \overline{\overline{z^2}+\cos z} & \mbox{for}
+%         & |z|<3 \\ 0  & \mbox{for} & 3\leq|z|\leq5 \\
+%         \sin\overline{z} & \mbox{for} & |z|>5
+%                \end{array}\right.   \]
+     
 \input true_1.tex
 \input true_2.tex
 \input true_3.tex
