"up to page 80"

--- a/true_notes.tex
+++ b/true_notes.tex
@@ -27,7 +27,7 @@
 \font\sevenrm=cmr7
 
 %\usepackage{amsmath,amssymb,latexsym} 
-%\usepackage{amsthm}
+%\usepackage{amsthm}`
 \usepackage{amsmath,amssymb,latexsym,hyperref} 
 \usepackage{easybmat}
 \usepackage{multirow,bigdelim}
@@ -153,10 +153,12 @@
 
 \newcommand{\bra}[1]{\langle #1|}
 \newcommand{\ket}[1]{|#1\rangle}
+\newcommand{\xAy}[3]{\langle #1| #2| #3 \rangle}
 \newcommand{\braket}[2]{\langle #1|#2\rangle}
 \newcommand{\expect}[1]{\langle #1\rangle}
 \newcommand{\Tr}{{\rm Tr}}
 \newcommand{\goes}{\rightarrow}
+\newcommand{\from}{\leftarrow}
 \newcommand{\define}{\overset{\Delta}{=} }
 \newcommand{\ninfty}{n\rightarrow\infty}
 \newcommand{\Rwp}{$\overset{\hbox{R}_{wp1}}{\sim}$}
