"Proceeding with secton 5"

--- a/true_notes.tex
+++ b/true_notes.tex
@@ -31,6 +31,7 @@
 \usepackage{amsmath,amssymb,latexsym,hyperref} 
 \usepackage{easybmat}
 \usepackage{multirow,bigdelim}
+\usepackage{cleveref}
 
 \hypersetup{
     bookmarks=true,          % show bookmarks bar?
@@ -112,6 +113,9 @@
 \def\c{\mathfrak{c}}
 \def\r{\mathfrak{r}}
 \def\o{\mathfrak{0}}
+
+\def\av{\underline{a}}
+\def\ev{\underline{e}}
 
 \def\E{\mathcal{E}}
 %\def{\Tr}{\cal{Tr}}
