"Finished first pass through section 5"

--- a/true_notes.tex
+++ b/true_notes.tex
@@ -367,7 +367,7 @@ level.
 %                      F. Brasse, {\em The H1 Detector at HERA},
 %                      Invited talks, Proceedings of the
 %            26th International Conference on High Energy Physics,
-%                   Dallas (1992) and DESY preprint 92-140 (1992)
+%                   Dallas (1992) and DESY preprint 92-140 (199`2)
 %\bibitem{H1-249} I.\, Abt, J.R.\,Smith, {\em MC Upgrades to Study
 %Untagged Events}, H1 Internal Note H1-249, (1992).
 %H1-249 considered only the diagonal elements of the Photon Flux
