--- a/true_1.tex
+++ b/true_1.tex
@@ -1,7 +1,7 @@
 \section{215A - Introduction and Review}
 
 I will assume that you all have had at least one quarter or one semester of undergraduate quantum mechanics.
-This means that you have been introduced to the wave function $\Psi(\vec r,t)$ and the Schroedinger wave equations, 
+This means that you have been introduced to the wave function $\Psi(\vec r,t)$ and the Schr\"odinger wave equations, 
 $H\Psi = i\hbar {\partial \Psi\over \partial t}$,which tells us how $\Psi$ develops in time. You should have solved the wave
 equation for the one-dimensional harmonic oscillator, the hydrogen atom, and particles incidents on square potential steps.
 You probably have also seen or been exposed to many other things.\\
