--- a/true_notes.tex
+++ b/true_notes.tex
@@ -224,6 +224,7 @@
 \baselineskip 16pt
 
 \tableofcontents
+%\input{Index215A.tex}
 \newpage
 
 \underline{Some Quantum Mechanics Texts}
@@ -239,7 +240,7 @@
 \item[] Trigg   --- Quantum Mechanics
 \item[] Gottfried --- Quantum Mechanics (Vol. I)
 \item[] Kursunoglu --- Modern Quantum Theory
-\item[] Landau and Lithschitz --- Quantum Mechanics 
+\item[] Landau and Lifschitz --- Quantum Mechanics 
 \item[] Bethe and Jackiw --- Intermediate Quantum Mechanics
 \item[] Jordan --- Linear Operators for Quantum Mechanics
 \item[] Jauch --- Foundations of Quantum Mechanics
@@ -252,86 +253,6 @@ There are also quite a few quantum mechanics books at the undergraduate
 level.
 
 \newpage
-
-\underline{Index to 215A Notes}
-
-\begin{description}
-\item[I.] \underline{Introduction and Review}
-\subitem $\Psi(\vec r, t)$ and $\Phi(\vec p, t)$ \hfill 3-I
-\subitem $\Psi(\vec r, t) \rightleftharpoons \Phi(\vec p, t)$ via Fourier Transforms \hfill 5-I
-\subitem The Hamiltonian and the Wave Equation \hfill 6-I
-\subitem Probability Density and Probability Current \hfill 8-I
-\subitem Scalar Products \hfill 9-I
-\subitem Eigenvalue Equations \hfill 12-I
-\subitem Schmidt Orthogonality Process \hfill 13-I
-
-\item[II.] \underline{The Uncertainty Principle from Schwartz's Inequality}
-\subitem Special case when $\Delta x \Delta p_x =\hbar/2$ \hfill 3-II
-
-\item[III.] \underline{The Dirac Delta Function}
-\subitem Common Representations of the $\delta$-function \hfill 2-III
-\subitem 3-dimensional $\delta$-functions \hfill 4-III
-\subitem Relations involving the $\delta$-function \hfill 7-III
-\subitem Riemann-Stieltjes Integrals \hfill 9-III
-
-\item[IV.] \underline{Wave Packets}
-\subitem A Simple Wave Packet \hfill 2-IV
-\subitem The Relation $\Delta x \Delta k \approx 1$ \hfill 4-IV
-\subitem General Wave Packets \& Group Velocity
-\subitem Spreading of Wave Packets
-
-\item[V.] \underline{The Mathematical Framework of Quantum Mechanics}
-\subitem Definition of a Field \hfill 3-V
-\subitem Definition of a Linear Vector Space \hfill 4-V
-\subitem Definition of a Unitary Space \hfill 6-V
-\subitem Definition of a Hilbert Space \hfill 7-V
-\subitem Linear Operators \hfill 9-V
-\subitem Dirac's Bra and Ket notation \hfill 11-V
-\subitem The Dual Space \hfill 13-V
-\subitem Hermitian Operators \hfill 20-V
-\subitem The Hermitian Conjugate of Expressions \hfill 22-V
-\subitem Eigenvalues and Eigenspectra \hfill 23-V
-\subitem Projection Operators \hfill 25-V
-\subitem Closure Relations \hfill 27-V
-\subitem Finite Matrices \hfill 29-V
-\subitem Infinite Matrices \hfill 33-V
-\subitem Matrix Representations of Quantum Mechanics \hfill 35-V
-\subitem Unitary Transformations \hfill 40-V
-\subitem Matrix Transformations \hfill 41-V
-\subitem Change of Represenations \hfill 44-V
-
-\item[VI.] \underline{The Physical Framework of Quantum Mechanics}
-\subitem The Postulates of Quantum Mechanics \hfill 2-VI
-\subitem The Schroedinger Picture \hfill 10-VI
-
-\item[VII.] \underline{The One Dimensional Harmonic Oscillator}
-\subitem The Harmonic Oscillator in the Schroedinger Picture \hfill 1-VII
-\subitem Hermite Polynomials\hfill 5-VII
-\subitem The Harmonic Oscillator to Bosons via Creation and Destruction Operators \hfill 10-VII
- 
-\item[VIII.] \underline{Bound States of Some Central Potentials}
-\subitem The Orbital Angular Momentum Operators \hfill 2-VIII
-\subitem The Spherical Harmonics, $Y_{LM}$\hfill 3-VIII
-\subitem Bound States of a Square Well \hfill 7-VIII
-\subitem Spherical Bessel Functions \hfill 7-VIII
-\subitem Bound States of the Hydrogen Atom \hfill 10-VIII
-\subitem The Isotropic Harmonic Oscillator \hfill 13-VIII
-
-\item[IX.]\underline{Angular Momentum Concepts}
-\subitem Raising and Lowering Operators, $L_+$ and $L_-$\hfill 2-IX
-\subitem The Pauli Spin Matrices \hfill 7-IX
-\subitem The Eigenkets of spin-$\half$ Particles \hfill 8-IX
-\subitem Rotation of Scalar Fields \hfill 9-IX
-\subitem The Rotation Operator, $e^{-iL_z \,d\theta}$\hfill 10-IX
-\subitem The Generalized Rotation Operator, $e^{-iJ_z \,d\theta}$ \hfill 13-IX
-\subitem Addition of Angular Momentum\hfill 17-IX
-\subitem Clebsch-Gordan Coefficients \hfill 24-IX
-\subitem The Singlet and Triplet States \hfill 27-IX
-\subitem Symmetric and Antisymmetric States \hfill 28-IX
-\subitem The Slater Determinant \hfill 31-IX
-\subitem The $jj$ and $LS$ coupling Schemes\hfill 36-IX
-
-\end{description}
 
 %\setcounter{section}{-1}
 
