--- a/true_notes.tex
+++ b/true_notes.tex
@@ -184,6 +184,8 @@
 \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
 \newenvironment{remark}[1][Remark]{\begin{trivlist}
 \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
+\newenvironment{postulate}[1][Postulate]{\begin{trivlist}
+\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
 
 \newcommand{\qed}{\nobreak \ifvmode \relax \else
       \ifdim\lastskip<1.5em \hskip-\lastskip
@@ -274,6 +276,7 @@ level.
 \input true_3.tex
 \input true_4.tex
 \input true_5.tex
+\input true_6.tex
 
 %\input{Groups.tex}
 %\input{Polarization.tex}
